<resources>
    <string name="app_name" translatable="false">My Instagram</string>
    <string name="refresh">There was a network error, swipe down to update</string>
    <string name="favorites_refresh">Maybe you have not added an any post to your favorites</string>

    <!-- TITLES -->
    <string name="title_home">Home</string>
    <string name="title_hot">Hot</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_other">Other</string>
    <string name="title_profile">Profile</string>
    <string name="title_about">About</string>
    <string name="title_comments">Comments</string>

    <string name="profile">Profile</string>
    <string name="rate_app">Rate this App</string>
    <string name="about">About</string>
    <string name="your_comment">Your comment</string>

    <!-- URLS -->
    <string name="url_home" translatable="false">"https://reactor.pbip.ru/nikita4you/scripts/get_all_post.php"</string>
    <string name="url_hot" translatable="false">"https://reactor.pbip.ru/nikita4you/scripts/get_hot.php"</string>
    <string name="url_favorites" translatable="false">"https://reactor.pbip.ru/nikita4you/scripts/get_my_saves.php"</string>
    <string name="url_like" translatable="false">"https://reactor.pbip.ru/nikita4you/scripts/set_like_dislike.php"</string>
    <string name="url_getcomments" translatable="false">"https://reactor.pbip.ru/nikita4you/scripts/get_comments.php"</string>
    <string name="url_addcomment" translatable="false">"https://reactor.pbip.ru/nikita4you/scripts/save_comments.php"</string>

    <string name="url_rate" translatable="false">https://www.youtube.com/watch?v=dQw4w9WgXcQ</string>

    <!-- CONTENT DESCRIPTIONS -->
    <string name="description_arrow_down" translatable="false">Arrow down</string>
    <string name="description_post_image" translatable="false">Post image</string>
    <string name="description_like" translatable="false">Like</string>

    <!-- TEXT -->
    <string name="login">Log in to the application</string>
    <string name="logout">Log out</string>
    <string name="save">Save</string>
    <string name="saved_toast">Your name %s saved</string>

    <string name="alarm_key" translatable="false">com.stepanovnv.myinstagram.DAILY_NOTIFICATION</string>
    <string name="push_notification_hour" translatable="false">19</string>
    <string name="push_notification_minute" translatable="false">45</string>
    <string name="push_notification">LOL KEK CHEBUREK</string>
    <string name="ad_chance" translatable="false">25</string>
    <string name="about_p1">Prod by stepanovnv95@gmail.com\nIcons by Freepik, Pixel perfect, Smashicons</string>

    <string name="share_not_allowed">Please confirm the permission for image sharing.</string>
</resources>
